# ChangeLog for dev-perl/POE
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/POE/ChangeLog,v 1.84 2009/04/03 20:42:50 tove Exp $

*POE-1.004 (03 Apr 2009)

  03 Apr 2009; Torsten Veller <tove@gentoo.org> +POE-1.004.ebuild:
  Version bump

  18 Mar 2009; Joseph Jezak <josejx@gentoo.org> POE-1.003-r1.ebuild:
  Marked ppc stable for bug #261750.

  09 Mar 2009; Ferris McCormick <fmccor@gentoo.org> POE-1.003-r1.ebuild:
  Sparc stable, Bug #261750.

  09 Mar 2009; Markus Meier <maekke@gentoo.org> POE-1.003-r1.ebuild:
  amd64/x86 stable, bug #261750

*POE-1.003-r1 (07 Mar 2009)

  07 Mar 2009; Patrick Lauer <patrick@gentoo.org> +POE-1.003-r1.ebuild:
  Trivial fix to the ebuild to fix #261609

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> POE-1.003.ebuild:
  Marked ~ppc for bug #251655.

*POE-1.003 (19 Dec 2008)

  19 Dec 2008; Torsten Veller <tove@gentoo.org> +POE-1.003.ebuild:
  Version bump

  18 Nov 2008; Torsten Veller <tove@gentoo.org> POE-0.99.89.ebuild:
  New virtuals: Compress-Zlib

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -POE-0.26.ebuild,
  -POE-0.32.02.ebuild, -POE-0.38.ebuild, -POE-0.95.00.ebuild,
  -POE-0.99.17.ebuild:
  Cleanup

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> POE-0.99.89.ebuild:
  Stable on ppc.

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org> POE-0.26.ebuild,
  POE-0.99.89.ebuild:
  x86 stable and drop alpha keyword

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org> POE-0.99.89.ebuild:
  Marking sparc stable

  15 Jun 2007; Michael Cummings <mcummings@gentoo.org> POE-0.99.89.ebuild:
  Marking amd64 stable

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> POE-0.99.17.ebuild:
  ppc stable

  18 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> POE-0.99.17.ebuild:
  Stable on sparc

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org> POE-0.99.17.ebuild:
  Marking stable amd64

*POE-0.99.89 (06 Apr 2007)
