@@ -4,16 +4,18 @@ Hash: SHA1
 DIST POE-0.9989.tar.gz 362662 RMD160 9ea42f099c865e400fefdcfa71a5c43d6e2e9e10 SHA1 c09c4fbb49c3c91be0667b38f9b3125b08cbd13f SHA256 73b69d825ab866f9f7a1d57ed586b35d61b14303847c76a8b0710a8b501e685e
 DIST POE-1.003.tar.gz 342560 RMD160 09eb2c8790e4f9979878bef156397c106331812b SHA1 17ca3e58e1bbb2f855f3849fa6ae83a73b81f9d5 SHA256 85535d03665f33032a96e18d22acaf251e0862c2b796986de7af6f3ad0ffdab3
 DIST POE-1.004.tar.gz 354224 RMD160 db7caf14669affffcf0817c9fa046aecb2e71ffd SHA1 a4c1310c000f47f1abebb1c1e114854cd1689165 SHA256 a61081551c102ca70d1aca2bcaf026d58072d5aaea3e56bbabffc9f611bab4af
+DIST POE-1.005.tar.gz 353833 RMD160 639f2fd0573bab7eae08b93180a9c8779b935020 SHA1 aae1983781f6e3b5ddc153819d81266e8c0c543f SHA256 9d7e089442e18712ace360dcd813acf5a2fb0f696664fb136913e61bd7bd8ef5
 EBUILD POE-0.99.89.ebuild 1132 RMD160 529c6c2309a9d785f3ad4811450c11253a117e3b SHA1 fc8dab64188737dfd0bf3b9acfacc2b0fa2773d3 SHA256 41618d7745421f54661144fc3708b1dfed9c51da30599bd303f0e4c63b6c47f8
 EBUILD POE-1.003-r1.ebuild 1111 RMD160 8d8b5950d9df7517973a5f80758217a8d8ace5d9 SHA1 dee6a7a52cc513ea3bb1a9b14d8e0b89a3a19531 SHA256 06b87103cdb6c5e096d48e5ee29e0b4090e060b53b93f24dd49e88a2735d7192
 EBUILD POE-1.003.ebuild 1077 RMD160 d46fea7282ec240a38818e767b27b3f4ffa43815 SHA1 790afde526a3f0730f8b2a5ac2e171b5b81ea04b SHA256 bc229a90a3e8ae3551ee1f693a261b63f56408c040a44788fa0eb27b59424f21
 EBUILD POE-1.004.ebuild 1022 RMD160 9acbc4111767515cee281c529387e2a3be92b1b1 SHA1 5bb9c578606dc632eaf4f9c6280ec85058255648 SHA256 bbe74a356a620a249239108289168e2fff8f60f7d71d710028d453b2e56c4d92
-MISC ChangeLog 10045 RMD160 2d0e08e7ad2d47bb6da49a825559199f8be5f4ba SHA1 65d11b02b99010f6c4d815f99c6890c216c8a956 SHA256 f839b3da7c3e1c88783bd54dbbb4067378f1eff0d0d1ea9e2690493a061f8405
+EBUILD POE-1.005.ebuild 1022 RMD160 4e7a22d90ee0e327571028ec0bd017d04ac06e38 SHA1 a45c792681bc0b437f2ca3f514fb1dbf65bc0a3d SHA256 4953c379500a8a2defb38632635483fb49f391a40a031e9d6fca9e204e4bd42d
+MISC ChangeLog 10154 RMD160 651530b5ea295621d3c65658631e6adfa4c65f58 SHA1 6a04f4a481f0298cc6898221cab2bc1247ac119b SHA256 2e6476094ce6b475de79bab5635936e413fa5ed2e43c2eebb60b0912f21fa9c3
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.10 (GNU/Linux)
 
-iEYEARECAAYFAknWdNEACgkQV3J2n04EauxWvwCgsfx06l/3lPJCnKuK7MDqDG8r
-Ga0AnRqhPNyhkkJKCVkV1FEdkcanKFh3
-=qbIv
+iEYEARECAAYFAknuAFYACgkQV3J2n04Eauz79gCg3r7lS7KXk6gSi4BtuBhRfC9q
+3Y8AoKsL7Q5OQT+cr4yM2xwYsxKOBmft
+=2dT/
 -----END PGP SIGNATURE-----
