@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/POE
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/POE/ChangeLog,v 1.84 2009/04/03 20:42:50 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/POE/ChangeLog,v 1.85 2009/04/21 17:20:09 tove Exp $
+
+*POE-1.005 (21 Apr 2009)
+
+  21 Apr 2009; Torsten Veller <tove@gentoo.org> +POE-1.005.ebuild:
+  Version bump
 
 *POE-1.004 (03 Apr 2009)
 
